# hulcoin-soft

./: CMakeLists.txt  INSTALL.md  README.md
HulCoin-HTBL/: CMakeLists.txt  set_registers_main.cc
HulCoin-HTBL/Funcs/: CMakeLists.txt  DwgFuncs.cc  DwgFuncs.hh
example-conf/: conf.txt
